[gd_scene load_steps=3 format=2]

[ext_resource path="res://items/pickups/PickUp.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1.5 )

[node name="PickUp" type="Area2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 1.5 )
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 2.0
margin_bottom = 3.0
color = Color( 0.878431, 0.85098, 0.207843, 1 )

[node name="DirectionTimer" type="Timer" parent="."]
wait_time = 0.33

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="DirectionTimer" to="." method="_on_DirectionTimer_timeout"]
[connection signal="finished" from="PickupSound" to="." method="_on_PickupSound_finished"]
